--- a/sys/compat/freebsd32/syscalls.master
+++ b/sys/compat/freebsd32/syscalls.master
@@ -495,7 +495,8 @@
 				    int nent, struct sigevent32 *sig); }
 258	AUE_AIO_WRITEV	STD	{ int freebsd32_aio_writev( \
 				    struct aiocb32 *aiocbp); }
-259	AUE_NULL	UNIMPL	nosys
+259	AUE_AIO_READV	STD	{ int freebsd32_aio_readv( \
+				    struct aiocb32 *aiocbp); }
 260	AUE_NULL	UNIMPL	nosys
 261	AUE_NULL	UNIMPL	nosys
 262	AUE_NULL	UNIMPL	nosys
