--- a/sys/kern/syscalls.master
+++ b/sys/kern/syscalls.master
@@ -1482,7 +1482,12 @@
 		    _Inout_ struct aiocb *aiocbp
 		);
 	}
-259-271	AUE_NULL	UNIMPL	nosys
+259	AUE_AIO_READV	STD {
+		int aio_readv(
+		    _Inout_ struct aiocb *aiocbp
+		);
+	}
+260-271	AUE_NULL	UNIMPL	nosys
 272	AUE_O_GETDENTS	COMPAT11 {
 		int getdents(
 		    int fd,
